Fixed In product listing page there are more white space in right side instead of product

--- a/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/module/_listings.less
+++ b/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/module/_listings.less
@@ -443,7 +443,7 @@
             .product-item {
                 margin-left: calc(~'(100% - 4 * 24.439%) / 3');
                 padding: 5px;
-                width: 24.439%;
+                width: 24.10%;
 
                 &:nth-child(4n + 1) {
                     margin-left: 0;
